Fix image error

--- a/src/content/posts/250108/250108.md
+++ b/src/content/posts/250108/250108.md
@@ -11,7 +11,7 @@ lang: 'en'
 ## YISF 2024
 ---
 
-![image](https://github.com/user-attachments/assets/0b836e43-fe5a-4f73-af77-c7e2b42bd553)
+![image](./img/start.jpg)
 
 제 22회 청소년 정보보호 페스티벌에 참가하여 예선전을 치루고 본선 진출 18명 중 18등으로 본선에 참가했었다. 당시 정션 아시아 및 데프콘과 같은 대회들이 겹쳐 분산된 탓에 실력이 턱없이 부족했던 나도 본선에 운좋게 참여할 수 있게 되었었다. 본선에서 출제된 리버싱 문제 3문제 중 1번 문제를 제외하고는 아무 것도 풀지 못 하였었고 미스크로 출제된 osint 문제를 하나 풀었었는데 어느 정도 실력을 쌓은 지금 리버싱 문제들을 다시 보니 ~~상당한 바보짓과 함께~~ 생각보다 수월하게 풀 수 있었고 다섯 달이 지난 지금에서야 라이트업을 작성하고자 한다. 당시 구글링 실력의 문제가 컸겠지만 ctf 대회 라이트업에 대해 다른 분야에 비해 리버싱이 적다는 생각에 안타까워 했었는데 이제는 내 손으로 적을 수 있게 되어 뿌듯하다는 마음이 든다.
 
@@ -222,19 +222,140 @@ print(f.decode())
 ## baby magic square
 ---
 
-![image](https://github.com/user-attachments/assets/7dee9da7-650a-498d-9e4e-4155505313cd)
+![image](./img/baby.png)
 
 제목에서부터 어떤 프로그램인지 힌트를 주는 문제이기 때문에 실행만으로도 많은 정보를 얻을 수 있다. 총 16번의 입력을 받고 ```incorrect```를 출력해주는데 최대 16번의 입력을 받는 것을 통해 4 * 4의 마방진을 그리는 문제라고 추측할 수 있다.
 
-![image](https://github.com/user-attachments/assets/43f035bf-1659-408e-b1ad-163fcefd7435)
+```c frame='code' title='baby_magic_square'
+__int64 __fastcall main(int a1, char **a2, char **a3)
+{
+  char v4; // [rsp+7h] [rbp-29h]
+  int i; // [rsp+8h] [rbp-28h]
+  int j; // [rsp+Ch] [rbp-24h]
+  int v7[6]; // [rsp+10h] [rbp-20h] BYREF
+  unsigned __int64 v8; // [rsp+28h] [rbp-8h]
 
-분석은 생각보다 정말 별 거 없다. 마방진이라는 걸 생각하고 추측(guessing)을 섞어 분석하면 금방 문제를 파악할 수 있다. 위의 스크린샷은 입력받는 함수의 모습으로 중복되는 수가 존재하는지 검사하며 총 16번 숫자를 입력받는다.
+  v8 = __readfsqword(0x28u);
+  puts(opening);
+  sub_1526(dword_5180, &unk_51C0);
+  v4 = 1;
+  for ( i = 0; i <= 3; ++i )
+  {
+    for ( j = 0; j <= 3; ++j )
+    {
+      if ( (unsigned __int8)sub_11E9(dword_5180[4 * i + j], &unk_51C0, 16LL) != 1 )
+      {
+        v4 = 0;
+        break;
+      }
+    }
+  }
+  putchar(10);
+  if ( v4 && (unsigned __int8)sub_1326(dword_5180) )
+  {
+    puts("!!! Correct !!!");
+    sub_17AC((__int64)&unk_5040, 8, dword_51A8);
+    sub_17AC((__int64)&unk_5080, 8, dword_5198);
+    sub_17AC((__int64)&unk_50C0, 8, dword_51A4);
+    sub_17AC((__int64)&unk_5100, 10, dword_51A0);
+    v7[0] = dword_5020;
+    v7[1] = dword_5024;
+    v7[2] = dword_5028;
+    v7[3] = dword_502C;
+    printf("Flag -> ");
+    sub_183B(&unk_5040, 8LL, v7);
+    sub_183B(&unk_5080, 8LL, v7);
+    sub_183B(&unk_50C0, 8LL, v7);
+    sub_183B(&unk_5100, 10LL, v7);
+    putchar(10);
+  }
+  else
+  {
+    puts("incorrect");
+  }
+  return 0LL;
+}
+```
 
-![image](https://github.com/user-attachments/assets/85145617-4c46-42fa-9313-5321c2ad43c6)
+분석은 생각보다 정말 별 거 없다. 마방진이라는 걸 생각하고 추측(guessing)을 섞어 분석하면 금방 문제를 파악할 수 있다. `main` 함수는 위와 같은데 조건을 만족하는(`sub_11E9`) 값만 입력받고 마방진이 맞는지(`sub_1326`) 검사한 후 플래그를 출력한다.
+
+```c frame='code' title='sub_11E9'
+_BOOL8 __fastcall sub_11E9(int a1, __int64 a2, int a3)
+{
+  char v4; // [rsp+1Fh] [rbp-11h]
+  int i; // [rsp+20h] [rbp-10h]
+  int v6; // [rsp+24h] [rbp-Ch]
+  int v7; // [rsp+28h] [rbp-8h]
+
+  v6 = a1 % 10;
+  v7 = a1 / 10 % 10;
+  if ( a1 % 10 == 1 || v7 == 1 )
+    return 1LL;
+  if ( v6 == 5 || v7 == 5 )
+    return 1LL;
+  if ( v6 == 8 || v7 == 8 )
+    return 1LL;
+  if ( v6 == 2 || v7 == 2 )
+    return 1LL;
+  v4 = 0;
+  for ( i = 0; i < a3; ++i )
+  {
+    if ( 10 * v6 + v7 == *(_DWORD *)(4LL * i + a2) )
+    {
+      v4 = 1;
+      return v4 == 1;
+    }
+  }
+  return v4 == 1;
+}
+```
 
 첫 번째 조건 함수이다. 입력받는 수의 1의 자릿수 또는 10의 자릿수에 ```[1, 2, 5, 8]``` 중 하나의 숫자가 존재**하거나** 마방진 내에 1의 자릿수와 10의 자릿수를 거꾸로 뒤집은 숫자가 존재해야 한다.
 
-![image](https://github.com/user-attachments/assets/7fcd4198-cfee-4b16-8441-dce72854e8c2)
+```c frame='code' title='sub_1326'
+bool __fastcall sub_1326(_DWORD *a1)
+{
+  int i; // [rsp+Ch] [rbp-2Ch]
+  int j; // [rsp+10h] [rbp-28h]
+  int v4; // [rsp+14h] [rbp-24h]
+  int k; // [rsp+18h] [rbp-20h]
+  int m; // [rsp+1Ch] [rbp-1Ch]
+  int v7; // [rsp+20h] [rbp-18h]
+  int n; // [rsp+24h] [rbp-14h]
+  int v9; // [rsp+28h] [rbp-10h]
+  int ii; // [rsp+2Ch] [rbp-Ch]
+  int v11; // [rsp+30h] [rbp-8h]
+  int jj; // [rsp+34h] [rbp-4h]
+
+  for ( i = 0; i <= 3; ++i )
+    dword_5200 += a1[i];
+  for ( j = 1; j <= 3; ++j )
+  {
+    v4 = 0;
+    for ( k = 0; k <= 3; ++k )
+      v4 += a1[4 * j + k];
+    if ( v4 != dword_5200 )
+      return 0;
+  }
+  for ( m = 0; m <= 3; ++m )
+  {
+    v7 = 0;
+    for ( n = 0; n <= 3; ++n )
+      v7 += a1[4 * n + m];
+    if ( v7 != dword_5200 )
+      return 0;
+  }
+  v9 = 0;
+  for ( ii = 0; ii <= 3; ++ii )
+    v9 += a1[4 * ii + ii];
+  if ( v9 != dword_5200 )
+    return 0;
+  v11 = 0;
+  for ( jj = 0; jj <= 3; ++jj )
+    v11 += a1[4 * jj + 3 - jj];
+  return v11 == dword_5200 && (dword_5200 <= 167 || a1[9] + a1[10] == 76) && a1[9] + a1[6] + a1[5] + a1[10] != 0;
+}
+```
 
 두 번째 조건 함수이다. 위의 반복문들은 별 거 없이 마방진의 기본적인 조건인 합이 일정한가를 판단하는 반복문들이다. 중요한 것은 ```return```의 조건들로 보이는 것과 같은 특별한 조건을 추가해준다.
 
@@ -302,10 +423,28 @@ else:
 
 문제는 여기서 발생한다. 분명히 ```Correct !!```를 출력해주는 입력값을 구했음에도 불구하고 플래그가 모두 깨져서 나오는 현상이 발생한다.
 
-![image](https://github.com/user-attachments/assets/f440fa50-2d07-458a-8a58-de7f7524217f)
+![image](./img/boom.png)
+
 위의 이미지와 같이 플래그가 깨져서 나오는데 이를 이해하기 위해서는 ida에서 플래그를 출력해주는 코드를 분석해보아야 한다.
 
-![image](https://github.com/user-attachments/assets/fe41ac2c-9619-4ff1-bf0b-656e1ab03131)
+```c frame='code' title='print flag'
+puts("!!! Correct !!!");
+sub_17AC((__int64)&unk_5040, 8, dword_51A8);
+sub_17AC((__int64)&unk_5080, 8, dword_5198);
+sub_17AC((__int64)&unk_50C0, 8, dword_51A4);
+sub_17AC((__int64)&unk_5100, 10, dword_51A0);
+v7[0] = dword_5020;
+v7[1] = dword_5024;
+v7[2] = dword_5028;
+v7[3] = dword_502C;
+printf("Flag -> ");
+sub_183B(&unk_5040, 8LL, v7);
+sub_183B(&unk_5080, 8LL, v7);
+sub_183B(&unk_50C0, 8LL, v7);
+sub_183B(&unk_5100, 10LL, v7);
+putchar(10);
+```
+
 플래그를 출력해주는 코드인데 여기서 ```sub_17AC```는 첫 번째 인자에 세 번째 인자를 xor 연산해주는 함수(첫 번째 인자는 가공되기 전의 플래그를 4개로 쪼갠 것, 두 번째 인자는 길이, 세 번째 인자는 **입력값의 특정 요소**이다.)이고 ```sub_183B```은 인자들을 가공하고 출력해주는 함수이다. 즉, ```sub_183B```에서 출력되는 것이 바로 플래그인데 이 플래그를 가공하는 것에 입력값의 특정 요소이고 ```Correct !!```를 출력해주는 입력값은 경우의 수가 다양한 반면 올바르게 플래그를 출력해주도록 하는 입력값은 정해져 있기 때문에 플래그가 깨져서 나오는 것이다.
 
 이를 해결하기 위해서는 다양한 방법이 있겠지만 생각보다 ```Correct !!```를 출력해주는 경우의 수가 많기 때문에 계속해서 제약 조건을 추가해서 될 때까지 다양한 해를 구하는 방법보다는 입력값이 두 자릿수 정수이고 플래그에 영향을 주는 것은 입력값 16개 중 4개라는 것을 고려하여 플래그를 출력해주는 함수를 그대로 가져오고 브루트 포싱을 하는 것이 훨씬 더 효율적이다. 위 솔브 코드에서 주석 처리되어 있는 46 ~ 49번째 줄의 제약 조건이 올바른 플래그를 출력하게 해주는 입력값에 대한 제약 조건이다. (브루트 포싱으로 구하고 추가해주었다.)
@@ -315,11 +454,81 @@ else:
 ## adult magic square
 ---
 
-![image](https://github.com/user-attachments/assets/08f56877-8515-4452-9354-8629965309c3)
+![image](./img/adult.png)
 
 오히려 baby보다 쉬운 것 같은 느낌이 드는 문제이다. 실행해보면 baby와 표면적으로는 두 가지 차이점이 존재하는데 첫 번째는 ```order```를 입력받는다는 것, 두 번째는 입력받는 수의 개수가 37이라는 점이다. 이를 인지하고 분석에 들어가면 이 또한 분석은 그렇게 어렵지 않다. ```order```의 경우 위 스크린샷에서 보이듯 4가 아니면 프로그램이 종료되기 때문에 4로 고정된다.
 
-![image](https://github.com/user-attachments/assets/93088f7a-58ff-4b19-aef3-31c73afca473)
+```c frame='code' title='main'
+__int64 __fastcall main(__int64 a1, char **a2, char **a3)
+{
+  void **v3; // rbx
+  int order; // [rsp+8h] [rbp-48h] BYREF
+  int i; // [rsp+Ch] [rbp-44h]
+  int j; // [rsp+10h] [rbp-40h]
+  int k; // [rsp+14h] [rbp-3Ch]
+  int m; // [rsp+18h] [rbp-38h]
+  int n; // [rsp+1Ch] [rbp-34h]
+  int ii; // [rsp+20h] [rbp-30h]
+  int n_7; // [rsp+24h] [rbp-2Ch]
+  int v13; // [rsp+28h] [rbp-28h]
+  int v14; // [rsp+2Ch] [rbp-24h]
+  _DWORD **ptr; // [rsp+30h] [rbp-20h]
+  unsigned __int64 v16; // [rsp+38h] [rbp-18h]
+
+  v16 = __readfsqword(0x28u);
+  setbuf(a1, a2, a3);
+  puts(off_6010);
+  puts(off_6018);
+  order = 0;
+  printf("order: ");
+  __isoc99_scanf("%d", &order);
+  if ( order != 4 )
+  {
+    puts("Invalid order");
+    exit(0);
+  }
+  n_7 = 7;
+  ptr = (_DWORD **)malloc(56uLL);
+  for ( i = 0; i < n_7; ++i )
+  {
+    v3 = (void **)&ptr[i];
+    *v3 = malloc(4LL * (order + i));
+  }
+  puts("Input numbers:");
+  for ( j = 0; j < order; ++j )
+  {
+    for ( k = 0; k < order + j; ++k )
+    {
+      printf("[>]");
+      __isoc99_scanf("%d", &ptr[j][k]);
+    }
+  }
+  for ( m = order; m < 2 * order - 1; ++m )
+  {
+    v13 = 2 * order - 1 + ~m + order;
+    v14 = m - order + 1;
+    for ( n = 0; n < v13; ++n )
+    {
+      printf("[>]");
+      __isoc99_scanf("%d", &ptr[m][n + v14]);
+    }
+  }
+  puts("\nChecking conditions");
+  if ( !sub_1576(ptr, order) )
+  {
+    puts("Be unsuccessful :(");
+  }
+  else
+  {
+    puts("!!!!! Be Successful !!!!! :)");
+    print_flag();
+  }
+  for ( ii = 0; ii < n_7; ++ii )
+    free(ptr[ii]);
+  free(ptr);
+  return 0LL;
+}
+```
 
 입력받는 코드를 보면 반복문 2개를 통해서 입력받는다. 별찍기 코드를 읽는다는 마음가짐으로 코드를 천천히 읽어보면 아래와 같이 7 * 7의 마방진을 아래와 같은 형태로 입력받는다는 것을 알 수 있다.
 
@@ -335,7 +544,37 @@ n  n  n  n  n  n  n
 
 ```7 * 7 - 12(0으로 고정된 요소) == 37```이라는 점에서 아까 직접 실행을 통해 확인한 입력 개수 37과 일치한다는 것을 알 수 있다. 여기까지 왔으면 사실상 다 푼 것으로 adult의 경우 baby와 달리 만족시키는 입력값을 구하면 바로 플래그를 출력해주기 때문에 마방진이라는 점을 감안하고 조건을 분석한 후 ```z3-solver``` 돌리면 풀 수 있다.
 
-![image](https://github.com/user-attachments/assets/c7457948-b9ed-418d-84d5-dceb64c8638d)
+```c frame='code' title='sub_1576'
+_BOOL8 __fastcall sub_1576(_DWORD **ptr, int order)
+{
+  unsigned int sum; // [rsp+1Ch] [rbp-14h]
+  signed int i; // [rsp+20h] [rbp-10h]
+  int n_37; // [rsp+24h] [rbp-Ch]
+
+  n_37 = 3 * order * (order - 1) + 1;
+  if ( !calloc(n_37, 4uLL) )
+  {
+    fwrite("Invalid memory allocation\n", 1uLL, 0x1AuLL, stderr);
+    exit(1);
+  }
+  if ( (unsigned __int8)sub_1745((__int64)ptr, order, n_37) != 1 )// 2 < num <= 39
+    return 0LL;
+  if ( !sub_1819(ptr, order, n_37) )            // 중복되는 수 존재x
+    return 0LL;
+  sum = 0;
+  for ( i = 0; i < order; ++i )
+    sum += (*ptr)[i];
+  printf("sum_firstline %d\n", sum);
+  if ( !sub_194C(ptr, order, sum)
+    || (unsigned __int8)sub_1A36(ptr, (unsigned int)order, sum) != 1// 0 ~ 4 합 ==
+    || (unsigned __int8)sub_1ACF(ptr, (unsigned int)order, sum) != 1 )
+  {
+    return 0LL;
+  }
+  return ptr[2][3] + ptr[3][3] == **ptr && 2 * ptr[4][3] == ptr[3][3];
+}
+```
+
 위 사진은 조건을 다루는 함수인데 분석 생략하고 조건만 말하자면 아래와 같다.
 1. 입력받는 수는 2 초과 39 이하이다.
 2. 중복되는 수는 존재하지 않는다.
