--- a/src/content/posts/250108/250108.md
+++ b/src/content/posts/250108/250108.md
@@ -532,7 +532,7 @@ __int64 __fastcall main(__int64 a1, char **a2, char **a3)
 
 입력받는 코드를 보면 반복문 2개를 통해서 입력받는다. 별찍기 코드를 읽는다는 마음가짐으로 코드를 천천히 읽어보면 아래와 같이 7 * 7의 마방진을 아래와 같은 형태로 입력받는다는 것을 알 수 있다.
 
-```frame='terminal' title='example'
+```txt title='example'
 n  n  n  n  0  0  0
 n  n  n  n  n  0  0
 n  n  n  n  n  n  0
