post cce2025 quals

--- a/src/content/posts/250817/250817.md
+++ b/src/content/posts/250817/250817.md
@@ -1,7 +1,7 @@
 ---
 title: '[CTF] CCE 2025 Quals Write Up'
 published: 2025-08-17
-description: 'CCE 2025 Write Up with Up-Solving'
+description: 'CCE 2025 Write Up'
 tags: ['CTF', '2025', 'REV']
 category: 'CTF'
 draft: true
@@ -395,5 +395,248 @@ cce2025{288cef3743f98fa01115ba808719e86a7abff0ff446f7862e064c78cba23e228}
 ## Brood
 ---
 
-## Saw
----
+```c frame='code' title='
+__int64 sub_6048()
+{
+  // 생략
+  s2 = xmmword_3F000;
+  v51 = xmmword_3F010;
+  if ( v42 == 32 && !bcmp(v41, &s2, 0x20uLL) )
+  {
+    v57[0] = &off_4AAE0;
+    v57[1] = 1LL;
+    v57[2] = 8LL;
+    *&v57[3] = 0LL;
+    sub_3DF70(v57);
+  }
+  sub_A570(v58, v41);
+  sub_A570(v54, v48);
+  free(ptr);
+  return sub_A570(v61, v62);
+}
+```
+
+`correct` 문자열을 찾아 분석할 코드를 찾아오면 위와 같은 함수 `sub_6048`을 볼 수 있다. 위 코드는 `sub_6048`의 가장 아래 로직인데 `s2`와 `v51`(연속된 메모리이다)에 어떤 데이터들을 불러오고 `v41`과 비교하여 같은지 검증한다. `v42`가 32인지도 검증하는데 `off_4AAE0`이 `correct` 문자열인 것을 보아 `v41`이 입력값이 암호화된 것, `v42`가 길이인 것을 알 수 있다.
+
+```c frame='code' title='sub_6048'
+v36 = sub_5B00(&v61, _byteswap_ulong(*v33), _byteswap_ulong((*(v33 + 6) << 16) | *(v33 + 4) | (*(v33 + 5) << 8)));
+v38 = sub_5B00(&v61, v36, v37);
+```
+
+다른 부분 생략하고 암호화를 직접적으로 하는 함수를 찾으면 위 두 줄로 함수 `sub_5B00`으로 암호화를 진행한다.
+
+```c frame='code' title='sub_5B00'
+__int64 __fastcall sub_5B00(VM *a1, int a2, int a3)
+{
+  _QWORD *v3; // rax
+  _QWORD *v4; // r14
+  unsigned __int64 v5; // rax
+
+  a1->left = a2;
+  a1->right = a3;
+  a1->IDX = 0;
+  *&a1->PC = 0LL;
+  v3 = malloc(0x2C8uLL);
+  if ( !v3 )
+    sub_410A(8LL, 712LL);
+  v4 = v3;
+  *v3 = sub_5EB2;
+  v3[1] = sub_5EEC;
+  v3[2] = sub_5F9B;
+  v3[3] = sub_5F00;
+  v3[4] = sub_5FEB;
+  v3[5] = sub_5FC3;
+  v3[6] = sub_5F9B;
+  v3[7] = sub_5E9A;
+  v3[8] = sub_5F28;
+  v3[9] = sub_5F14;
+  v3[10] = sub_5E82;
+  v3[11] = sub_5F28;
+  v3[12] = sub_5FFF;
+  v3[13] = sub_5E68;
+  v3[14] = sub_5F28;
+  v3[15] = sub_5FEB;
+  v3[16] = sub_5E51;
+  v3[17] = sub_5F28;
+  v3[18] = sub_5FFF;
+  v3[19] = sub_5FAF;
+  v3[20] = sub_5EEC;
+  v3[21] = sub_5FEB;
+  v3[22] = sub_5FD7;
+  v3[23] = sub_5FAF;
+  v3[24] = sub_5EEC;
+  v3[25] = sub_5F9B;
+  v3[26] = sub_5F00;
+  v3[27] = sub_5FFF;
+  v3[28] = sub_5FAF;
+  v3[29] = sub_5EEC;
+  v3[30] = sub_5FEB;
+  v3[31] = sub_5F14;
+  v3[32] = sub_6013;
+  v3[33] = sub_5FAF;
+  v3[34] = sub_5EEC;
+  v3[35] = sub_5FEB;
+  v3[36] = sub_5F9B;
+  v3[37] = sub_5EEC;
+  v3[38] = sub_602D;
+  v3[39] = sub_5FAF;
+  v3[40] = sub_5EEC;
+  v3[41] = sub_5FEB;
+  v3[42] = sub_5F9B;
+  v3[43] = sub_5FAF;
+  v3[44] = sub_5F00;
+  v3[45] = sub_5F9B;
+  v3[46] = sub_5EEC;
+  v3[47] = sub_5FC3;
+  v3[48] = sub_5F14;
+  v3[49] = sub_5FD7;
+  v3[50] = sub_5F7C;
+  v3[51] = sub_5FAF;
+  v3[52] = sub_5F00;
+  v3[53] = sub_5F9B;
+  v3[54] = sub_5EEC;
+  v3[55] = sub_5FC3;
+  v3[56] = sub_5F14;
+  v3[57] = sub_5FD7;
+  v3[58] = sub_5EEC;
+  v3[59] = sub_5F9B;
+  v3[60] = sub_5F00;
+  v3[61] = sub_5FFF;
+  v3[62] = sub_5FAF;
+  v3[63] = sub_5EEC;
+  v3[64] = sub_5FEB;
+  v3[65] = sub_5F9B;
+  v3[66] = sub_5EEC;
+  v3[67] = sub_5FEB;
+  v3[68] = sub_602D;
+  v3[69] = sub_5FAF;
+  v3[70] = sub_5F14;
+  v3[71] = sub_6013;
+  v3[72] = sub_5FAF;
+  v3[73] = sub_5EEC;
+  v3[74] = sub_5FEB;
+  v3[75] = sub_5F9B;
+  v3[76] = sub_5EEC;
+  v3[77] = sub_5EB2;
+  v3[78] = sub_5F00;
+  v3[79] = sub_5FAF;
+  v3[80] = sub_5EEC;
+  v3[81] = sub_5FEB;
+  v3[82] = sub_5FD7;
+  v3[83] = sub_5EB2;
+  v3[84] = sub_5F00;
+  v3[85] = sub_5F9B;
+  v3[86] = sub_5EEC;
+  v3[87] = sub_5FEB;
+  v3[88] = sub_5FC3;
+  while ( 1 )
+  {
+    v5 = *&a1->PC;
+    if ( v5 > 0x58 )
+      break;
+    (v4[v5])(a1);
+  }
+  sub_9C86(89LL, v4, 8LL);
+  return a1->left;
+}
+```
+
+함수 `sub_5B00`은 위와 같은데 여러 개의 함수를 배열에 포인터로 저장하고 반복문을 수행하며 암호화를 진행한다. 이 때 구현의 방식이 아주 간소화된 VM의 형태를 띄고 있다. `a1`으로부터의 오프셋에 따라 사용되는 역할이 다르기 때문에 새로 구조체를 선언해주어 지정해주었다.
+
+```sh frame='code' title='VM'
+00000000 VM              struc ; (sizeof=0xBC, align=0x4, copyof_54)
+00000000 KEY             db 160 dup(?)
+000000A0 left            dd ?
+000000A4 right           dd ?
+000000A8 IDX             dd ?
+000000AC X               dd ?
+000000B0 Y               dd ?
+000000B4 Z               dd ?
+000000B8 PC              dd ?
+000000BC VM              ends
+000000BC
+```
+
+`0xA0` 오프셋과 `0xA4`에 한 블럭에 해당하는 8Byte 값이 저장되고 앞 `0xA0`까지 저장된 모종의 값으로 암호화를 진행한다.
+
+```c frame='code' title='sub_5EB2'
+void __fastcall sub_5EB2(VM *a1, __int64 a2, __int64 a3, __int64 a4)
+{
+  unsigned __int64 IDX; // rdi
+
+  IDX = a1->IDX;
+  if ( IDX > 17 )
+    (sub_41FE)(IDX, 18LL, &off_4AA90, a4);
+  a1->X = *&a1->KEY[4 * IDX + 24];
+  a1->IDX = IDX + 1;
+  ++*&a1->PC;
+}
+```
+
+암호화를 진행하는 함수들은 모두 이런 형식으로 되어 있고, 모두 합쳐 Feistel과 비슷한 구조를 이룬다. 따라서 키 값에 해당하는 136Byte를 구한 후, 그대로 역연산하면 플래그를 구할 수 있다.
+
+```python frame='code' title='ex.py'
+MASK32 = 0xFFFFFFFF
+
+def u32(x): return x & MASK32
+def be32(b): return int.from_bytes(b, 'big')
+
+def parse_words_le(bs):
+    assert len(bs) % 4 == 0
+    out = []
+    for i in range(0, len(bs), 4):
+        out.append(bs[i] | (bs[i+1]<<8) | (bs[i+2]<<16) | (bs[i+3]<<24))
+    return [x & MASK32 for x in out]
+
+def F(a, T):
+    n3 = (a >> 24) & 0xF
+    n2 = (a >> 16) & 0xF
+    n1 = (a >> 8) & 0xF
+    n0 = a & 0xF
+    z  = u32(T[n3] + T[n2])
+    z ^= T[n1]
+    z  = u32(z + T[n0])
+    return z
+
+def dec_once(Af, Bf, K, T):
+    A = u32(Af ^ K[17]); B = u32(Bf ^ K[16]); A, B = B, A
+    for i in reversed(range(16)):
+        A, B = B, A
+        B = u32(B ^ F(A, T))
+        A = u32(A ^ K[i])
+    return A, B
+
+BYTES = [91, 98, 156, 161, 253, 130, 186, 150, 253, 130, 186, 150, 106, 249, 105, 16,
+         241, 48, 170, 33, 254, 187, 134, 58, 75, 242, 141, 141, 167, 230, 87, 255,
+         53, 41, 139, 192, 89, 153, 201, 43, 28, 110, 247, 59, 66, 134, 240, 39,
+         100, 33, 15, 69, 243, 218, 101, 218, 102, 221, 39, 186, 57, 131, 94, 166,
+         10, 221, 181, 23, 53, 113, 96, 154, 166, 11, 49, 209, 172, 181, 223, 152,
+         219, 114, 253, 47, 183, 223, 26, 208, 237, 175, 225, 184, 150, 126, 38, 106,
+         69, 144, 124, 186, 153, 127, 44, 241, 71, 153, 161, 36, 247, 108, 145, 179,
+         226, 242, 1, 8, 22, 252, 142, 133, 216, 32, 105, 99, 105, 78, 87, 113,
+         163, 254, 88, 164, 126, 61, 147, 244]
+
+K = parse_words_le(BYTES[:72])
+T = parse_words_le(BYTES[72:])
+
+ans = [bytes.fromhex('9C8BC06DDC7CE2C2')[::-1], bytes.fromhex('616C4A092D43A50C')[::-1], bytes.fromhex('4AAEC075C4CE6637')[::-1], bytes.fromhex('199375D47AF57186')[::-1]]
+
+for i in range(4):
+    A2 = be32(ans[i][:4]); B2 = be32(ans[i][4:])
+
+    A1, B1 = dec_once(A2, B2, K, T)
+    A0, B0 = dec_once(A1, B1, K, T)
+    print((A0.to_bytes(4,'big') + B0.to_bytes(4,'big')).decode(), end = '')
+
+print()
+```
+
+변수 `BYTES`가 키 값으로 동적 분석을 통해 입력값이나 다른 요소에 의해 변경되는 것이 아닌, 두 번의 함수 실행 모두에서 항상 일정한 값을 유지하는 것을 확인하였다. 따라서 해당 값을 그대로 덤프한 후, 여러 함수들을 역연산하는 파이썬 코드를 작성하고 블록 단위로 복호화하여 플래그를 구할 수 있었다.
+
+:::note[FLAG]
+cce2025{6c1bdf8f916c96a4609ae3c}
+:::
+
+## Comment
+
+작년에는 **0솔**로 마쳤지만 올 해는 팀원들과 함께 실력을 키워 예선을 3위로 마쳐 의미있던 시간이었다.
